# hdr-converter

./: .gitignore  README.md  main.spec  pyproject.toml
assets/palettes/: default.json
src/: main.py
src/core/: constants.py
src/core/encoders/: rgbm.py
src/core/enums/: effect_id.py
src/core/readers/: image.py
src/core/transformers/: effects.py  lut.py
src/core/writers/: image.py
src/gui/: app.py
src/gui/controllers/: image_list.py
src/gui/fonts/: load_font.py
src/gui/palette/: custom_palette.py
src/gui/screens/: home.py
src/gui/widgets/: draggable_list_item.py  effect_spin_box.py  effects_drag_list.py  exposure_filter_box.py  image_list_item.py  output_image_check.py  output_path_box.py  preview_dialog.py  rgbm_coefficient.py  select_files.py
src/gui/workers/: conversion.py  preview.py
