[project]
name = "hdr-converter"
version = "0.1.0"
description = "A simple Python tool that converts HDR images (.hdr and .exr) to RGBM format using OpenCV and OpenEXR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyside6>=6.10.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
